# zoe

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  railway.json  turbo.json
.codex/environments/: environment.toml
.maestro/playbooks/Initiation/: Phase-01-Working-Prototype.md  Phase-02-Trade-Parsing-and-Filter-Mapping.md  Phase-03-API-Reliability.md  Phase-04-Web-Build-Explorer.md  Phase-05-Worker-and-Persistence.md  Phase-06-Desktop-Trade-Overlay.md  Phase-07-Quality-and-Release-Readiness.md
apps/api/: package.json
apps/api/src/: fixtures.ts  index.ts  poe-ninja.ts  server.test.ts  server.ts  trade.ts
apps/desktop/: index.html  package.json  turbo.json
apps/desktop/src/: main.tsx  overlay-helpers.test.ts  overlay-helpers.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: builds-page.tsx  builds-query.test.ts  builds-query.ts  globals.css  icon.tsx  layout.tsx  page.tsx
apps/web/app/builds/[id]/: page.tsx  route-helpers.test.ts  route-helpers.ts  weapon-set-inventory.tsx
apps/worker/: package.json
apps/worker/src/: cli-runner.test.ts  cli-runner.ts  cli.ts  fixture.ts  jobs.test.ts  jobs.ts
docs/architecture/: build-intelligence-flow.md  system-overview.md  trade-flow.md
docs/decisions/: adr-001-fixture-first-development.md  adr-002-local-api-as-overlay-gateway.md
